# tripping-sansa

./: .gitignore  Makefile.am  README.md  configure  configure.ac
include/: logging.h
include/adapters/: libmicrohttpd.h
include/db/functions/: free_hosts.h  parse_mongo_uri.h
include/db/types/: mongo_host.h
include/resource/functions/: find_resource.h  found_resource.h  free_resource.h  resource_not_found.h
include/routing/functions/: free_route.h  route_path.h  route_pattern.h  route_resource.h
include/routing/types/: find_resource_fn.h  route.h
include/server/functions/: build_entity.h  cookie.h  entity_reader.h  entity_writer.h  error_result.h  free_resource.h  free_response.h  free_result.h  free_routes.h  handle_request.h  path_route.h  resource_define.h  resource_method.h  success_result.h
include/server/types/: cookie.h  entity.h  find_result.h  found_resource.h  reader_fn.h  resource.h  respond_fn.h  response.h  result.h  writer_fn.h
public/: evens.html
src/: app.c  logging.c  minimal_example.c
src/adapters/: libmicrohttpd.c
src/db/: mongo.c
src/resource/: resource.c
src/routing/: routing.c
src/server/: cookie.c  result.c  server.c
tests/: Makefile.am  test_helpers.c  test_helpers.h
tests/media_types/: test_html.c
tests/mongo/: test_uri.c
tests/resource/: test_resource.c
tests/routing/: test_routing.c
tests/server/: test_cookie.c  test_result.c  test_server.c
